syntax = "proto3";
option csharp_namespace = "GrpcChat.Database.Clients";

service ClientService 
{
  rpc GetClientByRefId(GetClientByRefIdRequest) returns (ClientResponseDto);
  rpc GetClientByClientId(GetClientByClientIdRequest) returns (ClientResponseDto);
  rpc CreateClient(CreateClientRequest) returns (ClientResponseDto);
  rpc UpdateClient(UpdateClientRequest) returns (ClientResponseDto);
  rpc DeleteClient(DeleteClientRequest) returns (ClientResponseDto);
}

message GetClientByRefIdRequest 
{
  string referenceId = 1;
}

message GetClientByClientIdRequest 
{
  string clientId = 1;
}

message CreateClientRequest 
{
  string name = 1;
}

message UpdateClientRequest
{
  string referenceId = 1;
  string name = 2;
}

message DeleteClientRequest
{
  string referenceId = 1;
}

message ClientResponseDto 
{
  string id = 1;
  string clientId = 2;
  string clientSecret = 3;
  bool isActive = 4;
  string name = 5;
  string referenceId = 6;
}
